Use generated types
Instead of having a api.customer and an internal Customer with all the conversions, just use one generated model. Lets see how far this will scale.
